[workspace]
members = ["benchmarks", "benchrunner", "data_structures"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rusty-hook = "^0.11.2"
rand = "0.8.5"
log = { version = "0.4.20", features = ["release_max_level_info"] }
env_logger = "0.10.1"

[profile.release]
opt-level = 3
