[package]
name = "benchrunner"
version.workspace = true
edition.workspace = true

[dependencies]
data_structures = { path = "../data_structures" }
clap = { version = "4.4.7", features = ["derive"] }
core_affinity = "0.8.1"
rand = { workspace = true }
once_cell = "1.19.0"
pprof = { version = "0.13.0", features = ["flamegraph", "_protobuf", "protobuf-codec", "prost-codec"]}
cpuprofiler = "0.0.4"
itertools = "0.12.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
rusty-hook = { workspace = true }

[features]
default = ["glibcmalloc"]
glibcmalloc = []
jemalloc = []
tcmalloc = []
hoard = []
